--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "homepage": "https://ms-decor-erp.vercel.app",
   "repository": {
     "type": "git",
-    "url": "https://github.com/seu-usuario/ms-decor-erp.git"
+    "url": "https://github.com/tecnologiawebnetsystem/front-casa-decoracao.git"
   },
   "keywords": [
     "erp",
@@ -51,7 +51,7 @@
     "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "lucide-react": "^0.294.0",
+    "lucide-react": "^0.454.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.2.0",
@@ -96,5 +96,9 @@
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
     "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+  },
+  "overrides": {
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18"
   }
 }
